* Add more context key to clean when adding to cache
* Add a way to register other objects in the pool
* Catch get_connection errors in Cache listener
* Compute cron job scheduling using server timezone
* Reset less often the user sessions
* Add option to strip leading and trailing whitespace from fields.Char
* Add database timeout parameter on RPC calls
* Combine search and get_keys in DictSchemaMixin

Version 6.4.3 - 2022-07-01
* Bug fixes (see mercurial logs for details)
* Enforce certificate validation for SMTP connection (issue11564)

Version 6.4.2 - 2022-06-15
* Bug fixes (see mercurial logs for details)

Version 6.4.1 - 2022-06-03
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
* Bug fixes (see mercurial logs for details)
* Use unittest discover
* Add module tutorial
* Test all XML view and SVG icon files are used
* Add notification message
* Add validate_fields to ModelStorage
* Drop support for PyPy and psycopg2cffi
* Use a set for field's depends
* Relax the constraint on a field's depends
* Include only needed fields when fetching a view definition
* Make warning check re-entrant
* Manage DatabaseDataError in ModelSQL
* Remove support for pysqlite2
* Do not import empty One2Many data
* Deduplicate entries in domain inversion's simplify
* Prevent to create and delete singleton
* Allow CORS on root path
* Allow button access to be deactivated
* Always return tuple for MultiSelection
* Use default selectors instead of select
* Add batch option to push queue tasks
* Support ref value for reference field
* Enforce ref model in XML data
* Do not resolve entities by default with lxml (issue11219)
* Use defusedxml to parse XML (issue11244)
* Use dictionary as search_order on Reference field
* Retry sending email on temporary failure
* Order not sorted Selection by index definition
* Add optional column on tree view
* Use dictionary as domain on Reference field
* Include model, field and column in import data error message