@@ -78,12 +78,13 @@ class ForSkipLocked(For):
 
 class Unaccent(Function):
     __slots__ = ()
-    _function = 'unaccent'
+    _function = config.get('database', 'unaccent_function', default='unaccent')
 
 
 class Similarity(Function):
     __slots__ = ()
-    _function = 'similarity'
+    _function = config.get(
+        'database', 'similarity_function', default='similarity')
 
 
 class Match(BinaryOperator):
